# petridishsim

./: AGENTS.md  README.md  pyproject.toml
api/: main.py
data/species/: bacteria.json  blackTrumpet.json  buttonMushroom.json  cordyceps.json  cremini.json  enoki.json  lionsMane.json  maitake.json  mildew.json  mold.json  morel.json  oyster.json  pinkOyster.json  portobello.json  shiitake.json  virus.json
src/calibration/: __init__.py  optimizer.py
src/chemical/: __init__.py  diffusion.py  enzymes.py  metabolism.py  reactions.py
src/segmentation/: __init__.py  inference.py  morphology.py
